tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_confirm_focused_with_match.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                     Set Master Password                    "
"                                                            "
"     ┌••••••••••••••──────────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"     Strength: 极弱 ███░░░░░░░░░░░░░                        " Hidden by multi-width symbols: [(16, " "), (18, " ")]
"                                                            "
"     ┌••••••••••••••ord ──────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"     ✓ Passwords match                                      "
"                                                            "
"                                                            "
"        Tab: switch field | Enter: submit | Esc: back       "
"                                                            "
"                                                            "
