tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_empty.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                     Set Master Password                    "
"                                                            "
"     ┌ New Password ──────────────────────────────────┐     "
"     │Enter new password                              │     "
"     └────────────────────────────────────────────────┘     "
"     Strength:                                              "
"                                                            "
"     ┌ Confirm Password ──────────────────────────────┐     "
"     │Confirm password                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
"      ↑↓/Tab: switch field | Enter: submit | Esc: back      "
"                                                            "
"                                                            "
