tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_fullscreen_with_logo.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                                                                                "
"                  ░█▀█░█▀█░█▀▀░█▀█░█░█░█▀▀░█░█░█▀▄░▀█▀░█▀█░█▀▀                  "
"                  ░█░█░█▀▀░█▀▀░█░█░█▀▄░█▀▀░░█░░█▀▄░░█░░█░█░█░█                  "
"                  ░▀▀▀░▀░░░▀▀▀░▀░▀░▀░▀░▀▀▀░░▀░░▀░▀░▀▀▀░▀░▀░▀▀▀                  "
"                                                                                "
"                               Set Master Password                              "
"                  Master password unlocks and opens your vault.                 "
"                    You can reset it with your recovery key.                    "
"                                                                                "
"               ┌ New Password ──────────────────────────────────┐               "
"               │Enter new password                              │               "
"               └────────────────────────────────────────────────┘               "
"               Strength:                                                        "
"                                                                                "
"               ┌ Confirm Password ──────────────────────────────┐               "
"               │Confirm password                                │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                                                                                "
"                ↑↓/Tab: switch field | Enter: submit | Esc: back                "
"                                                                                "
"                                                                                "
"                                                                                "
