tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_visible.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                     Set Master Password                    "
"                                                            "
"     ┌mysecretpassword────────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"     Strength: Too Weak ███░░░░░░░░░░░░░                    "
"                                                            "
"     ┌Confirm passwordd ──────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
"        Tab: switch field | Enter: submit | Esc: back       "
"                                                            "
"                                                            "
