tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_with_error.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                     Set Master Password                    "
"                                                            "
"     ┌•••••Password ──────────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"     Strength: Too Weak ███░░░░░░░░░░░░░                    "
"                                                            "
"     ┌Confirm passwordd ──────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"     ✗ Password must be at least 8 characters               "
"                                                            "
"        Tab: switch field | Enter: submit | Esc: back       "
"                                                            "
"                                                            "
