tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__set_password_test__set_password_with_input_masked.snap
---
source: tests/snapshot_tests/screens/set_password_test.rs
expression: backend
---
"                     Set Master Password                    "
"                                                            "
"     ┌••••••••••••••••────────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"     Strength: 极弱 ███░░░░░░░░░░░░░                        " Hidden by multi-width symbols: [(16, " "), (18, " ")]
"                                                            "
"     ┌Confirm passwordd ──────────────────────────────┐     "
"     │                                                │     "
"     └────────────────────────────────────────────────┘     "
"                                                            "
"                                                            "
"                                                            "
"        Tab: switch field | Enter: submit | Esc: back       "
"                                                            "
"                                                            "
